--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^15.1.0",
     "partysocket": "1.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -33,7 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^15.1.0",
     "partykit": "0.0.115",
     "shadcn": "^3.5.1",
     "tailwindcss": "^4",
